--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -3,6 +3,7 @@
     "New Password":"كلمة المرور الجديدة",
     "Confirm Password":"تأكيد كلمة المرور",
     "Log_In":"تسجيل الدخول",
+    "PaymentMethod":"طريقة الدفع",
     "SignUp":"تسجيل جديد",
     "Title_Contact":"هل لديك أي سؤال؟ سنعاود الاتصال بك في أقرب وقت ممكن",
     "Skip":"<< لاحقا",
