--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -6,6 +6,7 @@
     "TitlePassword ":"Enter the email address you used to create your account and we will email you a link to reset your password",
     "Login_big_lable":"Let's sign you in",
     "Signup_small_lable":"Sign up to see our products",
+    "PaymentMethod":"Payment Method",
     "Signup_big_lable":"Create your account",
     "Next":"Next",
     "Select_Language":"Select Language",
